# PLATFORM

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: starter_example.h
App/src/: main.cpp  starter_example.cpp
App2/: CMakeLists.txt
App2/include/: destructing_subscribing_event_queues.h
App2/src/: destructing_subscribing_event_queues.cpp  main.cpp
App3/: CMakeLists.txt
App3/include/: WebSocketServer.h  starter_example.h
App3/src/: WebSocketServer.cpp  starter_example.cpp
lib/: CMakeLists.txt
lib/platform/core/: SystemStatistics.cpp  Task.cpp
